; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_boot.c_boot_trace_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/trace/extr_trace_boot.c_boot_trace_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.trace_array = type { i32 }

@boot_trace = common dso_local global %struct.trace_array* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.trace_array*)* @boot_trace_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @boot_trace_init(%struct.trace_array* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.trace_array*, align 8
  store %struct.trace_array* %0, %struct.trace_array** %3, align 8
  %4 = load %struct.trace_array*, %struct.trace_array** %3, align 8
  store %struct.trace_array* %4, %struct.trace_array** @boot_trace, align 8
  %5 = load %struct.trace_array*, %struct.trace_array** %3, align 8
  %6 = icmp ne %struct.trace_array* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %13

8:                                                ; preds = %1
  %9 = load %struct.trace_array*, %struct.trace_array** %3, align 8
  %10 = call i32 @tracing_reset_online_cpus(%struct.trace_array* %9)
  %11 = load %struct.trace_array*, %struct.trace_array** %3, align 8
  %12 = call i32 @tracing_sched_switch_assign_trace(%struct.trace_array* %11)
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %8, %7
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @tracing_reset_online_cpus(%struct.trace_array*) #1

declare dso_local i32 @tracing_sched_switch_assign_trace(%struct.trace_array*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
